@@ -6,6 +6,7 @@ Enhancements:
 
 Bugs fixed:
 - 1420397: File handle leaks removed.
+- 1528352: Support for forward declarations.
 
 Changes in 0.7.4
 ================
